<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.student.pro.prostudent.RegisterActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/message_create"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/reg_confirm"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundbuttonaccent"
        android:text="@string/action_create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reg_cancel"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/reg_cancel"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:alpha="0.55"
        android:background="@drawable/roundbuttonprimary"
        android:text="@string/action_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reg_confirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="113dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="400dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reg_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_confirm_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_confirm_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/prompt_confirm_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_confirm_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_confirm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_surname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/prompt_surname"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/url_but"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/url_but"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="160dp"
                android:layout_marginStart="160dp"
                android:alpha=".75"
                android:background="@drawable/roundbuttonprimary"
                android:text="@string/prompt_upload"
                android:textColor="@color/colorPrimaryLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/reg_prog"

        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
